# secure_programming

./: README.md  appunti.txt  group_1_a_patch.txt  project.mk
LAB 1/PW CHECKER.rep/: projectState
LAB 1/PW CHECKER.rep/idata/00/: 00000000.prp  00000001.prp
LAB 1/PW CHECKER.rep/idata/00/~00000000.db/: db.2.gbf
LAB 1/PW CHECKER.rep/idata/00/~00000001.db/: db.2.gbf
LAB 1/PW CHECKER.rep/user/: ~journal.bak
LAB 1/PW CHECKER.rep/user/00/: 00000000.prp  00000001.prp
LAB 1/PW CHECKER.rep/user/00/~00000000.db/: db.1.gbf
LAB 1/PW CHECKER.rep/user/00/~00000001.db/: db.1.gbf
LAB 1/pw_checker/: pw_checker  solution.txt
LAB 1/pw_checker_naive/: pw_checker_naive  solution.txt
LAB 2/: Makefile  hash.txt  salt.txt  secure_implementation.c  sign_file.c
proj_repo/: group_1_a_patch.txt
proj_repo/project_v0/: CMakeLists.txt
proj_repo/project_v0/sources/functions/: functions.c  functions.h
proj_repo/project_v0/sources/functions/hidden_functions/: hidden_functions.c
proj_repo/project_v1/sources/functions/hidden_functions/: hidden_functions.c  hidden_functions.h
project_v0/sources/: main.c
project_v0/sources/functions/: functions.c
project_v0/sources/functions/hidden_functions/: hidden_functions.c  hidden_functions.h
project_v1/: CMakeLists.txt
project_v1/sources/: main.c
project_v1/sources/functions/: functions.c  functions.h
